--- a/.github/workflows/auto_submit.yml
+++ b/.github/workflows/auto_submit.yml
@@ -22,4 +22,4 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: repo
-        path: ./单突/results.csv
+        path: ./多突/results.csv
